--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,22 @@
-# Compiled class file
+# Build output
+**/target/
+**/build/
+**/out/
+**/bin/
 *.class
 
-# Log file
+# IDE settings
+**/.idea/
+**/*.iml
+**/.classpath
+**/.project
+**/.settings/
+
+# Logs and temp files
 *.log
+*.tmp
+*.swp
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# OS specific
+.DS_Store
+Thumbs.db
